<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.magotecnologia.calculadoranomina.MainActivity">
    <item
        android:id="@+id/companyMonthReportFragment"
        android:orderInCategory="100"
        android:title="@string/menu_nomina"
        app:showAsAction="never" />
    <item
        android:id="@+id/companyReductionsFragment"
        android:orderInCategory="100"
        android:title="@string/menu_contribution"
        app:showAsAction="never" />
    <item
        android:id="@+id/companySocialBenefits"
        android:orderInCategory="100"
        android:title="@string/menu_social_benefits"
        app:showAsAction="never" />
    <item
        android:id="@+id/registerFragment"
        android:orderInCategory="100"
        android:title="@string/menu_accounting_register"
        app:showAsAction="never" />
    <item
        android:id="@+id/clearDatabase"
        android:orderInCategory="100"
        android:title="@string/menu_clear_database"
        app:showAsAction="never" />


</menu>
