<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.employee.NewEmployeeFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/employee_name"
            android:theme="@style/FormFields.Text" />

        <EditText
            android:id="@+id/employeeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/employee_name"
            android:theme="@style/FormFields.Edit"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/employee_lastname"
            android:theme="@style/FormFields.Text" />

        <EditText
            android:id="@+id/employeeLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/employee_lastname"
            android:theme="@style/FormFields.Edit"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/employee_dni"
            android:theme="@style/FormFields.Text" />

        <EditText
            android:id="@+id/employeeDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/employee_dni"
            android:theme="@style/FormFields.Edit"
            android:inputType="numberSigned" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/employee_phone"
            android:theme="@style/FormFields.Text" />

        <EditText
            android:id="@+id/employeePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/employee_phone"
            android:theme="@style/FormFields.Edit"
            android:inputType="phone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/employee_position"
            android:theme="@style/FormFields.Text" />

        <EditText
            android:id="@+id/employeePosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/employee_position"
            android:theme="@style/FormFields.Edit"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/employee_salary"
            android:theme="@style/FormFields.Text" />

        <EditText
            android:id="@+id/employeeSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/employee_salary"
            android:theme="@style/FormFields.Edit"
            android:inputType="number" />

        <Button
            android:id="@+id/newEmployeeConfirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_confirm"
            android:theme="@style/FormFields.Text" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>