<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.company.CompanyReductionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="visible"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/FormFields.Title2"
                android:text="@string/contribution_health" />

            <TextView
                android:id="@+id/health"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:theme="@style/FormFields.Title2"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/FormFields.Title2"
                android:text="@string/contribution_pension" />

            <TextView
                android:id="@+id/pension"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:theme="@style/FormFields.Title2"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/FormFields.Title2"
                android:text="@string/contribution_professionalInsurance" />

            <TextView
                android:id="@+id/professionalInsurance"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:theme="@style/FormFields.Title2"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/FormFields.Title2"
                android:text="@string/contribution_family_compensation" />

            <TextView
                android:id="@+id/familyCompensation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:theme="@style/FormFields.Title2"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/FormFields.Title2"
                android:text="@string/contribution_family_bienestar" />

            <TextView
                android:id="@+id/family_bienestar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:theme="@style/FormFields.Title2"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/FormFields.Title2"
                android:text="@string/contribution_sena" />

            <TextView
                android:id="@+id/sena"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:theme="@style/FormFields.Title2"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>


</ScrollView>